Polybar Config updated; modes of windows

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -32,12 +32,12 @@ height = 20pt
 radius =0
 ;dpi = 96
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.background}
 line-size = 2pt
 border-size = 4pt
 border-color = #00000000
-padding-left = 12 pt
-padding-right = 12 pt
+padding-left = 12pt
+padding-right = 12pt
 module-margin = 0
 separator = " "
 separator-foreground = ${colors.current-line}
@@ -64,7 +64,7 @@ override-redirect = true
 
 
 [module/bspwm]
-type = internal/xworkspaces
+type = internal/bspwm
 label-active = %name%
 label-active-background = ${colors.purple}
 label-active-foreground = ${colors.background}
@@ -81,6 +81,48 @@ label-empty = %name%
 label-empty-foreground = ${colors.current-line}
 label-empty-padding = 1
 
+format = <label-mode> <label-state> 
+label-mode = %mode%
+label-mode-padding = 5
+label-foreground = ${colors.orange}
+
+label-tiled="tiled"
+label-tiled-background = ${colors.purple}
+label-tiled-foreground = ${colors.background}
+label-tiled-padding = 1
+
+label-floating = "fl"
+label-floating-background = ${colors.purple}
+label-floating-foreground = ${colors.background}
+label-floating-padding = 1
+
+label-monocle= "mono"
+label-monocle-background = ${colors.purple}
+label-monocle-foreground = ${colors.background}
+label-monocle-padding = 1
+
+
+
+
+label-fullscreen= ""
+
+label-locked = 
+label-locked-background = ${colors.purple}
+label-locked-padding-right = 1
+
+label-sticky = 
+label-sticky-background = ${colors.purple}
+label-sticky-padding-right = 1
+
+label-private = 﫸
+label-private-background = ${colors.purple}
+label-private-padding-right = 1
+
+
+
+label-marked = 
+label-marked-background = ${colors.purple}
+label-marked-padding-right = 1
 
 
 
