--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -171,7 +171,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [ "90:class_g = 'Alacritty'", "90:class_g = 'Rofi'"]
+opacity-rule = [ "90:class_g = 'Alacritty'"]
 
 
 #################################
@@ -180,27 +180,28 @@ opacity-rule = [ "90:class_g = 'Alacritty'", "90:class_g = 'Rofi'"]
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
+blur-method = "dual_kawase";
 # blur-size = 12
+blur-strength = 10
 #
-# blur-deviation = false
+blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+blur-background-frame = false
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
